🔧 config: webpack 설정

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Vanilla TypeScript Biler Plate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+		"dev": "webpack-dev-server --mode development"
   },
   "repository": {
     "type": "git",
