--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "prettier": "^2.6.2",
     "sass": "^1.51.0",
     "sass-loader": "^13.0.0",
     "ts-loader": "^9.3.0",
